--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:EventSimulation.Windows"
         xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Discrete Simulation" Height="720" Width="900" WindowStartupLocation="CenterScreen">
+        Title="Discrete Simulation" Height="680" Width="850" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="3.6*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="7*"/>
         </Grid.ColumnDefinitions>
 
         <!-- Left Column: Controls -->
@@ -49,60 +49,88 @@
                         <Label Name="lblSpeed" Content="Speed: 1" VerticalAlignment="Center" Margin="0,0,2,0"/>
                         <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="3600" Margin="2" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="SliderValueChanged"/>
                     </Grid>
+
+                    <StackPanel Margin="2" Grid.Row="6">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Workers A:" VerticalAlignment="Center" Margin="0,0,2,0"/>
+                            <TextBox x:Name="txtWorkersA" Grid.Column="1" Height="20"/>
+                        </Grid>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Workers B:" VerticalAlignment="Center" Margin="0,0,2,0"/>
+                            <TextBox x:Name="txtWorkersB" Grid.Column="1" Height="20"/>
+                        </Grid>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Workers C:" VerticalAlignment="Center" Margin="0,0,2,0"/>
+                            <TextBox x:Name="txtWorkersC" Grid.Column="1" Height="20"/>
+                        </Grid>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Time:" Margin="0,0,2,0"/>
+                            <TextBlock x:Name="txtTime" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                        </Grid>
+                    </StackPanel>
                 </Grid>
-            </GroupBox>
-
-            <GroupBox Header="Simulation Status" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
-                <StackPanel>
-                    <Grid Margin="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Workers A:" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <TextBox x:Name="txtWorkersA" Grid.Column="1" Height="20"/>
-                    </Grid>
-
-                    <Grid Margin="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Workers B:" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <TextBox x:Name="txtWorkersB" Grid.Column="1" Height="20"/>
-                    </Grid>
-
-                    <Grid Margin="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Workers C:" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <TextBox x:Name="txtWorkersC" Grid.Column="1" Height="20"/>
-                    </Grid>
-
-                    <Grid Margin="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Time:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtTime" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                    </Grid>
-                    
-                    <Label Content="Order States:" Margin="0,0,2,0"/>
-                    <ListBox x:Name="lstOrderStates" Height="80" Margin="2"/>
-
-                    <Label Content="Worker States:" Margin="0,0,2,0"/>
-                    <ListBox x:Name="lstWorkerStates" Height="80" Margin="2"/>
-
-                    <Label Content="Workstations Activity:" Margin="0,0,2,0"/>
-                    <ListBox x:Name="lstWorkstationActivities" Height="80" Margin="2"/>
-                </StackPanel>
             </GroupBox>
         </StackPanel>
 
         <!-- Right Column: PlotView -->
-        <oxy:PlotView x:Name="plotView" Grid.Column="1" Margin="2"/>
+        <Grid Margin="2" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <oxy:PlotView x:Name="plotView" Margin="2"/>
+
+            <GroupBox Header="Simulation Status" Grid.Row="1" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="28"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="28"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <Label Content="Order States:" Margin="0,0,2,0"/>
+                    <DataGrid x:Name="dgOrders" Grid.Row="1" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                            <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
+                            <DataGridCheckBoxColumn Header="Arrival Time" Binding="{Binding ArrivalTime}" Width="*"/>
+                            <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <Label Content="Worker States:" Grid.Row="2" Margin="0,0,2,0"/>
+                    <DataGrid x:Name="dgWorkers" Grid.Row="3" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                            <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
+                            <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
+                            <DataGridTextColumn Header="Current Order" Binding="{Binding CurrentOrder}" Width="*"/>
+                            <DataGridTextColumn Header="Current Place" Binding="{Binding CurrentPlace}" Width="*"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </GroupBox>
+        </Grid>
     </Grid>
 </Window>
