--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -47,7 +47,7 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Name="lblSpeed" Content="Speed: 1" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="3600" Margin="2" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="SliderValueChanged"/>
+                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="1000" Margin="2" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="SliderValueChanged"/>
                     </Grid>
 
                     <StackPanel Margin="2" Grid.Row="6">
@@ -105,28 +105,31 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="28"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
                     <Label Content="Order States:" Margin="0,0,2,0"/>
-                    <DataGrid x:Name="dgOrders" Grid.Row="1" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                    <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40"/>
                             <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
-                            <DataGridCheckBoxColumn Header="Arrival Time" Binding="{Binding ArrivalTime}" Width="*"/>
+                            <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="*"/>
                             <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
                         </DataGrid.Columns>
                     </DataGrid>
 
-                    <Label Content="Worker States:" Grid.Row="2" Margin="0,0,2,0"/>
-                    <DataGrid x:Name="dgWorkers" Grid.Row="3" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                    <Label Content="Worker States:" Grid.Column="1" Margin="0,0,2,0"/>
+                    <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40"/>
                             <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
                             <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
-                            <DataGridTextColumn Header="Current Order" Binding="{Binding CurrentOrder}" Width="*"/>
-                            <DataGridTextColumn Header="Current Place" Binding="{Binding CurrentPlace}" Width="*"/>
+                            <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="*"/>
+                            <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="*"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
