works great, updated UI and event handling

--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:EventSimulation.Windows"
         xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Discrete Simulation" Height="680" Width="850" WindowStartupLocation="CenterScreen">
+        Title="Discrete Simulation" Height="680" Width="900" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -100,7 +100,7 @@
 
             <oxy:PlotView x:Name="plotView" Margin="2"/>
 
-            <GroupBox Header="Simulation Status" Grid.Row="1" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
+            <GroupBox Header="Simulation Status" Grid.Row="1" Grid.ColumnSpan="2" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="28"/>
@@ -115,7 +115,7 @@
                     <Label Content="Order States:" Margin="0,0,2,0"/>
                     <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40"/>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
                             <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
                             <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="*"/>
                             <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
@@ -125,11 +125,11 @@
                     <Label Content="Worker States:" Grid.Column="1" Margin="0,0,2,0"/>
                     <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40"/>
+                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
                             <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
                             <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
                             <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="*"/>
-                            <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="*"/>
+                            <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="2*"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
