--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,15 +6,20 @@
         xmlns:local="clr-namespace:EventSimulation.Windows"
         xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Discrete Simulation" Height="680" Width="900" WindowStartupLocation="CenterScreen">
+        Title="Discrete Simulation" Height="720" Width="960" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="7*"/>
         </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="6*"/>
+        </Grid.RowDefinitions>
+
         <!-- Left Column: Controls -->
-        <StackPanel Grid.Column="0">
+        <StackPanel>
             <GroupBox Header="Simulation Controls" Margin="2" BorderBrush="DarkBlue" Foreground="DarkBlue">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -47,7 +52,7 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Name="lblSpeed" Content="Speed: 1" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="36000" Margin="2" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="SliderValueChanged"/>
+                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="5" IsSnapToTickEnabled="True" Margin="2" ValueChanged="SliderValueChanged"/>
                     </Grid>
 
                     <StackPanel Margin="2" Grid.Row="6">
@@ -91,49 +96,41 @@
             </GroupBox>
         </StackPanel>
 
-        <!-- Right Column: PlotView -->
-        <Grid Margin="2" Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+        <oxy:PlotView x:Name="plotView" Grid.Column="1" Margin="2"/>
 
-            <oxy:PlotView x:Name="plotView" Margin="2"/>
+        <GroupBox Header="Simulation Status" Grid.Row="1" Grid.Column="1" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="28"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            <GroupBox Header="Simulation Status" Grid.Row="1" Grid.ColumnSpan="2" Margin="2" BorderBrush="DarkRed" Foreground="DarkRed">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="5*"/>
-                    </Grid.ColumnDefinitions>
+                <Label Content="Order States:"/>
+                <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
+                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
+                        <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="*"/>
+                        <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
-                    <Label Content="Order States:" Margin="0,0,2,0"/>
-                    <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                            <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
-                            <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="*"/>
-                            <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-
-                    <Label Content="Worker States:" Grid.Column="1" Margin="0,0,2,0"/>
-                    <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                            <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
-                            <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
-                            <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="*"/>
-                            <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="*"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </Grid>
-            </GroupBox>
-        </Grid>
+                <Label Content="Worker States:" Grid.Column="1"/>
+                <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
+                        <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
+                        <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
+                        <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="*"/>
+                        <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
