--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:EventSimulation.Windows"
         xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Discrete Simulation" Height="720" Width="960" WindowStartupLocation="CenterScreen">
+        Title="Discrete Simulation" Height="720" Width="1040" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -52,7 +52,7 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Name="lblSpeed" Content="Speed:" VerticalAlignment="Center" Margin="0,0,2,0"/>
-                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="5" IsSnapToTickEnabled="True" Margin="2" ValueChanged="SliderValueChanged"/>
+                        <Slider x:Name="sldSpeed" Grid.Column="1" Minimum="1" Maximum="7" IsSnapToTickEnabled="True" Margin="2" ValueChanged="SliderValueChanged"/>
                     </Grid>
 
                     <StackPanel Margin="2" Grid.Row="6">
@@ -106,17 +106,17 @@
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <Label Content="Order States:"/>
                 <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" MinColumnWidth="50" HeadersVisibility="Column" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
-                        <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="*"/>
-                        <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
+                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="2*"/>
+                        <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="2*"/>
+                        <DataGridTextColumn Header="State" Binding="{Binding State}" Width="2*"/>
                     </DataGrid.Columns>
                 </DataGrid>
 
@@ -124,10 +124,10 @@
                 <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" MinColumnWidth="50" HeadersVisibility="Column" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                        <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
-                        <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
-                        <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="*"/>
-                        <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="*"/>
+                        <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="2*"/>
+                        <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="2*"/>
+                        <DataGridTextColumn Header="Order" Binding="{Binding CurrentOrder.Id}" Width="2*"/>
+                        <DataGridTextColumn Header="Place" Binding="{Binding CurrentPlace}" Width="2*"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
