--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:EventSimulation.Windows"
         xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="Discrete Simulation" Height="720" Width="1040" WindowStartupLocation="CenterScreen" Closing="WindowClosing">
+        Title="Discrete Simulation" Height="720" Width="1000" WindowStartupLocation="CenterScreen" Closing="WindowClosing">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -82,15 +82,6 @@
                             <Label Content="Workers C:" VerticalAlignment="Center" Margin="0,0,2,0"/>
                             <TextBox x:Name="txtWorkersC" Grid.Column="1" Height="20"/>
                         </Grid>
-
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Label Content="Time:" Margin="0,0,2,0"/>
-                            <TextBlock x:Name="txtTime" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                        </Grid>
                     </StackPanel>
                 </Grid>
             </GroupBox>
@@ -108,6 +99,8 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
                     <Grid>
@@ -115,47 +108,11 @@
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Label Content="Finished Orders:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtFinishedOrders" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                        <Label Content="Time:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtTime" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
                     </Grid>
 
                     <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Pending Orders:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtPendingOrders" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                    </Grid>
-
-                    <Grid Grid.Row="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Utility A:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtUtilityA" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                    </Grid>
-
-                    <Grid Grid.Row="3">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Utility B:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtUtilityB" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                    </Grid>
-
-                    <Grid Grid.Row="4">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="Utility C:" Margin="0,0,2,0"/>
-                        <TextBlock x:Name="txtUtilityC" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
-                    </Grid>
-
-                    <Grid Grid.Row="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -164,7 +121,7 @@
                         <TextBlock x:Name="txtQueueA" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
                     </Grid>
 
-                    <Grid Grid.Row="6">
+                    <Grid Grid.Row="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -173,13 +130,67 @@
                         <TextBlock x:Name="txtQueueB" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
                     </Grid>
 
-                    <Grid Grid.Row="7">
+                    <Grid Grid.Row="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Content="Queue C:" Margin="0,0,2,0"/>
                         <TextBlock x:Name="txtQueueC" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+                  
+                    <Grid Grid.Row="4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Utility A:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtUtilityA" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+
+                    <Grid Grid.Row="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Utility B:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtUtilityB" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+
+                    <Grid Grid.Row="6">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Utility C:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtUtilityC" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+
+                    <Grid Grid.Row="7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Finished Orders:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtFinishedOrders" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+
+                    <Grid Grid.Row="8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Pending Orders:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtPendingOrders" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
+                    </Grid>
+
+                    <Grid Grid.Row="9">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Confidence Interval:" Margin="0,0,2,0"/>
+                        <TextBlock x:Name="txtConfidenceInterval" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" Foreground="Black"/>
                     </Grid>
                 </Grid>
             </GroupBox>
@@ -203,9 +214,9 @@
                 <DataGrid x:Name="dgOrders" Grid.Row="1" Margin="2" AutoGenerateColumns="False" MinColumnWidth="50" HeadersVisibility="Column" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="2*"/>
-                        <DataGridTextColumn Header="State" Binding="{Binding State}" Width="2*"/>
-                        <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="2*"/>
+                        <DataGridTextColumn Header="Type" Binding="{Binding Type}" Width="*"/>
+                        <DataGridTextColumn Header="State" Binding="{Binding State}" Width="*"/>
+                        <DataGridTextColumn Header="Arrival Time" Binding="{Binding FormattedTime}" Width="1.5*"/>
                     </DataGrid.Columns>
                 </DataGrid>
 
@@ -213,10 +224,10 @@
                 <DataGrid x:Name="dgWorkers" Grid.Row="1" Grid.Column="1" Margin="2" AutoGenerateColumns="False" MinColumnWidth="50" HeadersVisibility="Column" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
-                        <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="2*"/>
-                        <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="2*"/>
-                        <DataGridTextColumn Header="Order" Binding="{Binding Order.Id}" Width="2*"/>
-                        <DataGridTextColumn Header="Workplace" Binding="{Binding FormattedWorkplace}" Width="2*"/>
+                        <DataGridTextColumn Header="Group" Binding="{Binding Group}" Width="*"/>
+                        <DataGridCheckBoxColumn Header="Is Busy" Binding="{Binding IsBusy}" Width="*"/>
+                        <DataGridTextColumn Header="Order" Binding="{Binding Order.Id}" Width="*"/>
+                        <DataGridTextColumn Header="Workplace" Binding="{Binding FormattedWorkplace}" Width="*"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
